--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>2.9.4</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
